@@ -1,3 +1,10 @@
+Sat Sep  7 16:02:09 EEST 2002  Pekka Riikonen <priikone@silcnet.org>
+
+	* In JOIN notify handling, mark that the cache entry of the
+	  client cannot be expired.  Can cause crashes on normal
+	  server (asserts client->channels).  Affected file is
+	  silcd/packet_receive.c.
+
 Sat Sep  7 14:22:43 CEST 2002 Lubomir Sedlacik <salo@silcnet.org>
 
 	* Rewritten check for POSIX threads.  Use --with-pthreads[=DIR]
